Revert "Change vcf jar to use a classfileset to pull all dependencies.  Should save"
This reverts commit 441022c4c600624928da46419a6a289200700f3e.

--- a/build.xml
+++ b/build.xml
@@ -545,11 +545,12 @@
 
     <target name="vcf.jar" depends="gatk.compile,init.jar">
         <jar jarfile="${dist.dir}/vcf.jar">
-	    <classfileset dir="${java.classes}">
-	      <root classname="org.broadinstitute.sting.utils.variantcontext.VariantContext" />
-	      <root classname="org.broadinstitute.sting.utils.codecs.vcf.VCFCodec" />
-	      <root classname="org.broadinstitute.sting.utils.codecs.vcf.VCF3Codec" />
-	    </classfileset>
+            <fileset dir="${java.classes}">
+              <include name="**/utils/codecs/**/*.class"/>
+              <include name="**/utils/variantcontext/**/*.class"/>
+              <include name="org/broadinstitute/sting/utils/exceptions/**"/>
+	      <include name="org/broadinstitute/sting/utils/help/DocumentedGATKFeature.class"/>
+            </fileset>
         </jar>
     </target>
 
