--- a/build.xml
+++ b/build.xml
@@ -147,12 +147,12 @@
       <mkdir dir="${ivy.jar.dir}"/>
 
       <!-- Comment out the following two lines to build the GATK without a network connection, assuming you have all of the libraries cached already -->
-<!--       <get src="http://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/${ivy.jar.file}" -->
-<!--            dest="${ivy.jar.dir}/${ivy.jar.file}" -->
-<!--            usetimestamp="true"/> -->
-<!--       <taskdef resource="org/apache/ivy/ant/antlib.xml" -->
-<!--                uri="antlib:org.apache.ivy.ant" -->
-<!--                classpath="${ivy.jar.dir}/${ivy.jar.file}"/> -->
+      <get src="http://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/${ivy.jar.file}"
+           dest="${ivy.jar.dir}/${ivy.jar.file}"
+           usetimestamp="true"/>
+      <taskdef resource="org/apache/ivy/ant/antlib.xml"
+               uri="antlib:org.apache.ivy.ant"
+               classpath="${ivy.jar.dir}/${ivy.jar.file}"/>
 
       <ivy:settings file="${ivy.settings.dir}/ivysettings.xml"/>
         <property name="init.resolve.done" value="true"/>
