Intentionally breaking the binary release as a test.
This is to test the ability of the new release system
to detect the kinds of packaging errors we couldn't
detect before (in this case, missing codecs). If all goes
as expected, "GSA-Stable: Release" will fail, preventing
the binary release and github from getting updated, while
"GSA-Stable: All Tests" and all of the other old test plans
will pass.

Will revert this in a bit -- if the system works as it should,
our users will never see it until after it's been reverted.

--- a/build.xml
+++ b/build.xml
@@ -541,7 +541,7 @@
         <jar jarfile="${dist.dir}/StingUtils.jar">
             <fileset dir="${java.classes}">
               <include name="**/utils/**/*.class"/>
-              <exclude name="**/utils/codecs/vcf/**/*.class"/>
+              <exclude name="**/utils/codecs/**/*.class"/>
               <exclude name="**/utils/variantcontext/**/*.class"/>
             </fileset>
             <fileset dir="${java.classes}" includes="**/commandline/**/*.class"/>
